# qt-app

./: CMakeLists.txt  Main.qml  README.md  main.cpp
ui/BottomBar/: BottomBar.qml
ui/LeftSide/: LeftSide.qml
ui/RightSide/: RightSide.qml
